k8s/deploy-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-test-deployment-single
  namespace: default
  labels:
    app: k8s-test
    owner: VneTraffiqua
spec:
  selector:
    matchLabels:
      project: django-test
  template:
    metadata:
      labels:
        run: django-pod
        project: django-test
    spec:
      containers:
        - name: django-test-app
          image: django_app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
