k8s/svc-manifest.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: django-pod
  name: k8s-test-deployment-single
  namespace: default
spec:
  ports:
  - nodePort: 31925
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: django-pod
  type: NodePort
status:
  loadBalancer: {}
